--- a/package.json
+++ b/package.json
@@ -3,39 +3,42 @@
   "description": "L'endroit",
   "license": "MIT",
   "dependencies": {
+    "prismic-reactjs": "^1.3.1",
     "dotenv": "^6.1.0",
-    "gatsby": "^2.3.34",
+    "gatsby": "^2.5.0",
+    "gatsby-background-image": "^0.9.12",
     "gatsby-image": "^2.0.41",
+    "gatsby-plugin-catch-links": "^2.3.0",
     "gatsby-plugin-favicon": "^3.1.6",
-    "gatsby-plugin-gdpr-cookies": "1.0.5",
     "gatsby-plugin-google-analytics": "^2.0.20",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-sitemap": "^2.1.0",
-    "gatsby-source-prismic-graphql": "^3.5.0",
+    "gatsby-source-prismic": "3.0.0",
     "gatsby-transformer-remark": "^2.1.7",
     "gatsby-transformer-sharp": "^2.1.21",
-    "moment": "^2.22.2",
     "node-sass": "^4.11.0",
-    "prismic-reactjs": "^1.3.0",
     "pubsub-js": "^1.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "scroll-into-view": "^1.9.5",
+    "react-player": "^1.15.3",
+    "react-tooltip": "^4.2.5",
+    "scroll-into-view": "^1.14.2",
     "throttle-debounce": "^2.1.0"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
   },
   "scripts": {
-    "start": "npm run clean && npm run dev",
     "clean": "gatsby clean",
     "dev": "gatsby develop",
+    "start": "npm run clean && npm run dev",
     "build": "gatsby build",
     "serve": "gatsby serve",
+    "preview": "npm run build && npm run serve",
     "format": "prettier --write src/**/*.{js,jsx}",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
     "deploy--": "gatsby build --prefix-paths && gh-pages -d public"
