--- a/src/schemas/project.json
+++ b/src/schemas/project.json
@@ -1,118 +1,76 @@
 {
-  "Main" : {
-    "uid" : {
-      "type" : "UID",
-      "config" : {
-        "label" : "Slug"
+  "Main": {
+    "uid": {
+      "type": "UID",
+      "config": {
+        "label": "Slug"
       }
     },
-    "title" : {
-      "type" : "StructuredText",
-      "config" : {
-        "single" : "heading1, heading2, heading3, heading4, heading5, heading6",
-        "label" : "Title"
+    "title": {
+      "type": "StructuredText",
+      "config": {
+        "single": "heading1, heading2, heading3, heading4, heading5, heading6",
+        "label": "Title"
       }
     },
-    "texte" : {
-      "type" : "StructuredText",
-      "config" : {
-        "multi" : "paragraph, preformatted, heading1, heading2, heading3, heading4, heading5, heading6, strong, em, hyperlink, image, embed, list-item, o-list-item, o-list-item",
-        "allowTargetBlank" : true,
-        "label" : "Texte"
+    "texte": {
+      "type": "StructuredText",
+      "config": {
+        "multi": "paragraph, preformatted, heading1, heading2, heading3, heading4, heading5, heading6, strong, em, hyperlink, image, embed, list-item, o-list-item, o-list-item",
+        "allowTargetBlank": true,
+        "label": "Texte"
       }
     },
-    "image_featured" : {
-      "type" : "Image",
-      "config" : {
-        "constraint" : { },
-        "thumbnails" : [ ],
-        "label" : "Image Featured"
+    "image_featured": {
+      "type": "Image",
+      "config": {
+        "constraint": {},
+        "thumbnails": [],
+        "label": "Image Featured"
       }
     },
-    "body" : {
-      "type" : "Slices",
-      "fieldset" : "Slice zone",
-      "config" : {
-        "labels" : {
-          "images" : [ ],
-          "texte" : [ ]
-        },
-        "choices" : {
-          "images" : {
-            "type" : "Slice",
-            "fieldset" : "Images",
-            "description" : "Images",
-            "icon" : "face",
-            "display" : "list",
-            "non-repeat" : {
-              "caption" : {
-                "type" : "StructuredText",
-                "config" : {
-                  "multi" : "paragraph, preformatted, heading1, heading2, heading3, heading4, heading5, heading6, strong, em, hyperlink, image, embed, list-item, o-list-item, o-list-item",
-                  "label" : "Caption"
-                }
-              }
-            },
-            "repeat" : {
-              "image" : {
-                "type" : "Image",
-                "config" : {
-                  "constraint" : { },
-                  "thumbnails" : [ ],
-                  "label" : "Image"
-                }
-              }
+    "date": {
+      "type": "Date",
+      "config": {
+        "label": "Date"
+      }
+    },
+    "realisateur": {
+      "type": "Text",
+      "config": {
+        "label": "Réalisateur"
+      }
+    },
+    "categorie": {
+      "type": "Link",
+      "config": {
+        "select": "document",
+        "customtypes": [
+          "categorie"
+        ],
+        "label": "Catégorie"
+      }
+    },
+    "credits": {
+      "type": "Group",
+      "config": {
+        "fields": {
+          "label": {
+            "type": "Text",
+            "config": {
+              "label": "Label"
             }
           },
-          "texte" : {
-            "type" : "Slice",
-            "fieldset" : "Texte",
-            "description" : "Texte",
-            "icon" : "face",
-            "display" : "list",
-            "non-repeat" : {
-              "chapo" : {
-                "type" : "StructuredText",
-                "config" : {
-                  "multi" : "paragraph, preformatted, heading1, heading2, heading3, heading4, heading5, heading6, strong, em, hyperlink, image, embed, list-item, o-list-item, o-list-item",
-                  "label" : "Chapo"
-                }
-              },
-              "texte1" : {
-                "type" : "StructuredText",
-                "config" : {
-                  "multi" : "paragraph, preformatted, heading1, heading2, heading3, heading4, heading5, heading6, strong, em, hyperlink, image, embed, list-item, o-list-item, o-list-item",
-                  "label" : "Texte"
-                }
-              }
-            },
-            "repeat" : { }
+          "valeur": {
+            "type": "StructuredText",
+            "config": {
+              "multi": "paragraph, hyperlink",
+              "allowTargetBlank": true,
+              "label": "Valeur Html"
+            }
           }
-        }
-      }
-    }
-  },
-  "SEO" : {
-    "seo_titile" : {
-      "type" : "StructuredText",
-      "config" : {
-        "single" : "paragraph",
-        "label" : "SEO Titile"
-      }
-    },
-    "seo_texte" : {
-      "type" : "StructuredText",
-      "config" : {
-        "multi" : "paragraph",
-        "label" : "SEO Texte"
-      }
-    },
-    "seo_image" : {
-      "type" : "Image",
-      "config" : {
-        "constraint" : { },
-        "thumbnails" : [ ],
-        "label" : "SEO Image"
+        },
+        "label": "Crédits"
       }
     }
   }
