--- a/src/schemas/settings.json
+++ b/src/schemas/settings.json
@@ -1,10 +1,9 @@
 {
   "Main" : {
-    "cpt_id" : {
-      "type" : "StructuredText",
+    "uid" : {
+      "type" : "UID",
       "config" : {
-        "single" : "heading1, heading2, heading3, heading4, heading5, heading6",
-        "label" : "CPT ID"
+        "label" : "Slug"
       }
     },
     "title" : {
