--- a/package.json
+++ b/package.json
@@ -2,45 +2,75 @@
   "name": "l-endroit",
   "description": "L'endroit",
   "license": "MIT",
-  "dependencies": {
-    "prismic-reactjs": "^1.3.1",
-    "dotenv": "^6.1.0",
-    "gatsby": "^2.5.0",
-    "gatsby-background-image": "^0.9.12",
-    "gatsby-image": "^2.0.41",
-    "gatsby-plugin-catch-links": "^2.3.0",
-    "gatsby-plugin-favicon": "^3.1.6",
-    "gatsby-plugin-google-analytics": "^2.0.20",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-sharp": "^2.1.3",
-    "gatsby-plugin-sitemap": "^2.1.0",
-    "gatsby-source-prismic": "3.0.0",
-    "gatsby-transformer-remark": "^2.1.7",
-    "gatsby-transformer-sharp": "^2.1.21",
-    "node-sass": "^4.11.0",
-    "pubsub-js": "^1.7.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "react-player": "^1.15.3",
-    "react-tooltip": "^4.2.5",
-    "scroll-into-view": "^1.14.2",
-    "throttle-debounce": "^2.1.0"
-  },
-  "devDependencies": {
-    "prettier": "^1.16.4"
+  "engines": {
+    "node": ">=14.0.0"
   },
   "scripts": {
     "clean": "gatsby clean",
-    "dev": "gatsby develop",
+    "w": "gatsby develop",
     "start": "npm run clean && npm run dev",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "preview": "npm run build && npm run serve",
     "format": "prettier --write src/**/*.{js,jsx}",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "deploy--": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy--": "gatsby build --prefix-paths && gh-pages -d public",
+    "d": "git add . && git commit -m 'deployy' && git push"
+  },
+  "dependencies": {
+    "@prismicio/react": "^2.7.3",
+    "@sendgrid/mail": "^7.7.0",
+    "clsx": "^2.1.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "form-data": "^4.0.0",
+    "framer-motion": "^11.0.12",
+    "gatsby": "^5.13.3",
+    "gatsby-plugin-google-analytics": "^5.14.0",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-prismic-previews": "^6.0.1",
+    "gatsby-plugin-react-helmet": "^6.13.1",
+    "gatsby-plugin-react-svg": "^3.3.0",
+    "gatsby-plugin-sass": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-plugin-styled-components": "^6.13.1",
+    "gatsby-source-prismic": "^6.0.1",
+    "gatsby-transformer-sharp": "^5.13.1",
+    "prismic-reactjs": "^1.3.4",
+    "pubsub-js": "^1.9.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.8.1",
+    "react-player": "^2.16.0",
+    "sass": "^1.71.1",
+    "styled-components": "^6.1.8",
+    "throttle-debounce": "^5.0.2"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.23.10",
+    "@babel/preset-react": "^7.23.3",
+    "@netlify/plugin-gatsby": "^3.8.0",
+    "@types/node": "^20.11.27",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "babel-plugin-styled-components": "^2.1.4",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-wesbos": "^4.0.1",
+    "eslint-plugin-html": "^8.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "gatsby-plugin-postcss": "^6.13.1",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.1"
   }
 }
